--- a/templates/answerfile_4.1_upgrade.txt.j2
+++ b/templates/answerfile_4.1_upgrade.txt.j2
@@ -3,12 +3,12 @@ OVESETUP_DB/fixDbConfiguration=bool:True
 OVESETUP_DWH_DB/performBackup=bool:True
 OVESETUP_RHEVM_DIALOG/confirmUpgrade=bool:False
 {% if ovirt_engine_setup_engine_vacuum_full is defined and ovirt_engine_setup_engine_vacuum_full %}
-OVESETUP_DB/engineVacuumFull=bool:True
+OVESETUP_DB/engineVacuumFull=bool:{{ ovirt_engine_setup_engine_vacuum_full }}
 {% else %}
 OVESETUP_DB/engineVacuumFull=bool:False
 {% endif %}
 {% if ovirt_engine_setup_dwh_vacuum_full is defined and ovirt_engine_setup_dwh_vacuum_full %}
-OVESETUP_DB/dwhVacuumFull=bool:True
+OVESETUP_DB/dwhVacuumFull=bool:{{ ovirt_engine_setup_dwh_vacuum_full }}
 {% else %}
 OVESETUP_DB/dwhVacuumFull=bool:False
 {% endif %}
