--- a/templates/answerfile_4.2_upgrade.txt.j2
+++ b/templates/answerfile_4.2_upgrade.txt.j2
@@ -12,12 +12,12 @@ OVESETUP_OVN/ovirtProviderOvnPassword=str:{{ ovirt_engine_setup_provider_ovn_pas
 OVESETUP_OVN/ovirtProviderOvnPassword=none:None
 {% endif %}
 {% if ovirt_engine_setup_engine_vacuum_full is defined and ovirt_engine_setup_engine_vacuum_full %}
-OVESETUP_DB/engineVacuumFull=bool:True
+OVESETUP_DB/engineVacuumFull=bool:{{ ovirt_engine_setup_engine_vacuum_full }}
 {% else %}
 OVESETUP_DB/engineVacuumFull=bool:False
 {% endif %}
 {% if ovirt_engine_setup_dwh_vacuum_full is defined and ovirt_engine_setup_dwh_vacuum_full %}
-OVESETUP_DB/dwhVacuumFull=bool:True
+OVESETUP_DB/dwhVacuumFull=bool:{{ ovirt_engine_setup_dwh_vacuum_full }}
 {% else %}
 OVESETUP_DB/dwhVacuumFull=bool:False
 {% endif %}
