Fix upgrade flow
Change-Id: I9b32e6568dcdda2ac1d5851ef17eb805ff25cc0d
Signed-off-by: Ondra Machacek <omachace@redhat.com>

--- a/templates/answerfile_4.2_upgrade.txt.j2
+++ b/templates/answerfile_4.2_upgrade.txt.j2
@@ -1,4 +1,4 @@
-{% include "./templates/basic_answerfile.txt.j2" %},
+{% include "./templates/basic_answerfile.txt.j2" %}
 {% if ovirt_engine_setup_provider_ovn_configure is defined and ovirt_engine_setup_provider_ovn_configure %}
 OVESETUP_DB/engineVacuumFull=bool:True
 OVESETUP_OVN/ovirtProviderOvn=bool:True
