--- a/templates/answerfile_4.2_basic.txt.j2
+++ b/templates/answerfile_4.2_basic.txt.j2
@@ -1,4 +1,4 @@
-{% include "./templates/basic_answerfile.txt.j2" %},
+{% include "./templates/basic_answerfile.txt.j2" %}
 OVESETUP_DB/engineVacuumFull=bool:{{ ovirt_engine_setup_engine_vacuum_full }}
 OVESETUP_DB/dwhVacuumFull=bool:{{ ovirt_engine_setup_dwh_vacuum_full }}
 {% if ovirt_engine_setup_provider_ovn_configure is defined and ovirt_engine_setup_provider_ovn_configure %}
