--- a/templates/answerfile_4.2_upgrade.txt.j2
+++ b/templates/answerfile_4.2_upgrade.txt.j2
@@ -12,5 +12,5 @@ OVESETUP_OVN/ovirtProviderOvnPassword=str:{{ ovirt_engine_setup_provider_ovn_pas
 OVESETUP_OVN/ovirtProviderOvnPassword=none:None
 {% endif %}
 {% if ovirt_engine_setup_wait_running_tasks is defined %}
-QUESTION/1/OVESETUP_WAIT_RUNNING_TASKS=str:{{ ovirt_engine_setup_wait_running_tasks }}
+QUESTION/1/OVESETUP_WAIT_RUNNING_TASKS=str:{{ ovirt_engine_setup_wait_running_tasks | ternary('yes','no')  }}
 {% endif %}
