Allow setting custom FQDN
During the interactive installation it is possible to specify
a custom FQDN instead of using an autodetected host name. This is
especially useful when using virtual hosts on the server hosting
oVirt Engine.

This patch allows setting ovirt_engine_setup_fqdn variable which
will be used during the installation process to set the value to
a desired one.

Closes-bug: #49

--- a/templates/basic_answerfile.txt.j2
+++ b/templates/basic_answerfile.txt.j2
@@ -1,4 +1,7 @@
 [environment:default]
+{% if ovirt_engine_setup_fqdn %}
+OVESETUP_CONFIG/fqdn=str:{{ ovirt_engine_setup_fqdn }}
+{% endif %}
 {% if ovirt_engine_setup_firewall_manager %}
 OVESETUP_CONFIG/updateFirewall=bool:True
 OVESETUP_CONFIG/firewallManager=str:{{ ovirt_engine_setup_firewall_manager }}
