Add ovirt_engine_setup_apache_ssl variable
When we want to use httpd certificates signed by other CA, we need to set the
OVESETUP_APACHE_CONFIG_SSL variable to ‘manual’. There's no need to supply
all of the answer file manually though so let's have a role variable for
setting that. By default, it's not defined so engine's default (‘automatic’)
will be used.

--- a/templates/basic_answerfile.txt.j2
+++ b/templates/basic_answerfile.txt.j2
@@ -1,4 +1,7 @@
 [environment:default]
+{% if ovirt_engine_setup_apache_ssl is defined %}
+OVESETUP_APACHE_CONFIG_SSL=str:{{ovirt_engine_setup_apache_ssl}}
+{% endif %}
 {% if ovirt_engine_setup_fqdn is defined %}
 OVESETUP_CONFIG/fqdn=str:{{ ovirt_engine_setup_fqdn }}
 {% endif %}
